--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,21 @@
 @tailwind components;
 
 @tailwind utilities;
+
+@layer base {
+  * {
+    @apply font-cairo;
+  }
+}
+
+@layer utilities {
+  /* Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
